--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header class="header">
+            <div class="logo">Header Logo</div>
+            <ul>
+                <li><a href="#">Header Link One</a></li>
+                <li><a href="#">Header Link Two</a></li>
+                <li><a href="#">Header Link Three</a></li>
+            </ul>
+        </header>
+    </div>
 </body>
 </html>
