--- a/index.html
+++ b/index.html
@@ -7,15 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header class="header">
-            <div class="logo">Header Logo</div>
-            <ul>
-                <li><a href="#">Header Link One</a></li>
-                <li><a href="#">Header Link Two</a></li>
-                <li><a href="#">Header Link Three</a></li>
-            </ul>
-        </header>
-    </div>
+    <section>
+        <div class="container">
+            <header class="header">
+                <div class="logo">Header Logo</div>
+                <ul>
+                    <li><a href="#">Header Link One</a></li>
+                    <li><a href="#">Header Link Two</a></li>
+                    <li><a href="#">Header Link Three</a></li>
+                </ul>
+            </header>
+            <div class="hero">
+                <div class="hero-left">
+                    <h1 class="title">This website is awesome</h1>
+                    <p class="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button class="sign-up">Sign up</button>
+                </div>
+                <div class="hero-right">
+                    <div class="placeholder">this is a placeholder for an image</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
