--- a/index.html
+++ b/index.html
@@ -19,12 +19,35 @@
             </header>
             <div class="hero">
                 <div class="hero-left">
-                    <h1 class="title">This website is awesome</h1>
+                    <h1 class="main-title">This website is awesome</h1>
                     <p class="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     <button class="sign-up">Sign up</button>
                 </div>
                 <div class="hero-right">
                     <div class="placeholder">this is a placeholder for an image</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <h2 class="info-title">Some random information.</h2>
+            <div class="info-container">
+                <div class="container">
+                    <div class="box"></div>
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
+                <div class="container">
+                    <div class="box"></div>
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
+                <div class="container">
+                    <div class="box"></div>
+                    <div class="text">This is some subtext under an illustration or image</div>
+                </div>
+                <div class="container">
+                    <div class="box"></div>
+                    <div class="text">This is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div>
