--- a/index.html
+++ b/index.html
@@ -52,5 +52,11 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="quote-box">
+            <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-author">-Thor, God of Thunder</p>
+        </div>
+    </section>
 </body>
 </html>
