Build out cta section

--- a/index.html
+++ b/index.html
@@ -58,5 +58,18 @@
             <p class="quote-author">-Thor, God of Thunder</p>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <div class="cta-box">
+                <div class="cta-left">
+                    <p>Call to action! It's time!</p>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="cta-right">
+                    <button class="sign-up">Sign up</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
