--- a/index.html
+++ b/index.html
@@ -71,5 +71,8 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>Copyright &copy; The Odin Project 2023 </p>
+    </footer>
 </body>
 </html>
