--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <section>
-        <div class="container">
-                <header class="header">
-                    <div class="logo">Header Logo</div>
-                    <ul>
-                        <li><a href="#">Header Link One</a></li>
-                        <li><a href="#">Header Link Two</a></li>
-                        <li><a href="#">Header Link Three</a></li>
-                    </ul>
-                </header>
-            <div class="hero">
-                <div class="hero-left">
-                    <h1 class="main-title">This website is awesome</h1>
-                    <p class="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                    <button class="sign-up">Sign up</button>
-                </div>
-                <div class="hero-right">
-                    <div class="placeholder">this is a placeholder for an image</div>
-                </div>
+    <section class="header-hero">
+        <header class="header">
+            <p class="logo">Header Logo</p>
+            <ul>
+                <li><a href="#">Header Link One</a></li>
+                <li><a href="#">Header Link Two</a></li>
+                <li><a href="#">Header Link Three</a></li>
+            </ul>
+        </header>
+        <div class="hero">
+            <div class="hero-left">
+                <h1 class="main-title">This website is awesome</h1>
+                <p class="sub-text">This website has some subtext that goes here under the main title. It's a smaller
+                    font and the color is lower contrast</p>
+                <button class="sign-up">Sign up</button>
+            </div>
+            <div class="hero-right">
+                <div class="placeholder">this is a placeholder for an image</div>
             </div>
         </div>
     </section>
@@ -54,7 +55,8 @@
     </section>
     <section>
         <div class="quote-box">
-            <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling
+                up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p class="quote-author">-Thor, God of Thunder</p>
         </div>
     </section>
@@ -75,4 +77,5 @@
         <p>Copyright &copy; The Odin Project 2023 </p>
     </footer>
 </body>
+
 </html>
