--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer class="footer">
         <p>Copyright &copy; The Odin Project 2023 </p>
     </footer>
 </body>
