--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <div class="hero">
             <div class="hero-left">
-                <h1 class="main-title">This website is awesome</h1>
+                <h1 class="main-text">This website is awesome</h1>
                 <p class="sub-text">This website has some subtext that goes here under the main title. It's a smaller
                     font and the color is lower contrast</p>
                 <button class="sign-up">Sign up</button>
