Style sign up button

--- a/index.html
+++ b/index.html
@@ -13,23 +13,26 @@
 
 <body>
     <section class="header-hero">
-        <header class="header">
-            <p class="logo">Header Logo</p>
-            <ul>
-                <li><a href="#">Header Link One</a></li>
-                <li><a href="#">Header Link Two</a></li>
-                <li><a href="#">Header Link Three</a></li>
-            </ul>
-        </header>
-        <div class="hero">
-            <div class="hero-left">
-                <h1 class="main-text">This website is awesome</h1>
-                <p class="sub-text">This website has some subtext that goes here under the main title. It's a smaller
-                    font and the color is lower contrast</p>
-                <button class="sign-up">Sign up</button>
-            </div>
-            <div class="hero-right">
-                <div class="placeholder">this is a placeholder for an image</div>
+        <div class="container">
+            <header class="header">
+                <p class="logo">Header Logo</p>
+                <ul>
+                    <li><a href="#">Header Link One</a></li>
+                    <li><a href="#">Header Link Two</a></li>
+                    <li><a href="#">Header Link Three</a></li>
+                </ul>
+            </header>
+            <div class="hero">
+                <div class="hero-left">
+                    <h1 class="main-text">This website is awesome</h1>
+                    <p class="sub-text">This website has some subtext that goes here under the main title. It's a
+                        smaller
+                        font and the color is lower contrast</p>
+                    <button class="sign-up">Sign up</button>
+                </div>
+                <div class="hero-right">
+                    <div class="placeholder">this is a placeholder for an image</div>
+                </div>
             </div>
         </div>
     </section>
