Style info section

--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@
                 </div>
             </div>
     </section>
-    <section>
+    <section class="info">
         <div class="container">
             <h2 class="info-title">Some random information.</h2>
-            <div class="info-container">
-                <div class="container">
-                    <div class="box"></div>
-                    <div class="text">This is some subtext under an illustration or image</div>
-                </div>
-                <div class="container">
-                    <div class="box"></div>
-                    <div class="text">This is some subtext under an illustration or image</div>
-                </div>
-                <div class="container">
-                    <div class="box"></div>
-                    <div class="text">This is some subtext under an illustration or image</div>
-                </div>
-                <div class="container">
-                    <div class="box"></div>
-                    <div class="text">This is some subtext under an illustration or image</div>
-                </div>
+            <div class="wrapper">
+                    <div class="info-container">
+                        <div class="box"></div>
+                        <div class="text">This is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info-container">
+                        <div class="box"></div>
+                        <div class="text">This is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info-container">
+                        <div class="box"></div>
+                        <div class="text">This is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info-container">
+                        <div class="box"></div>
+                        <div class="text">This is some subtext under an illustration or image</div>
+                    </div>
             </div>
         </div>
     </section>
