--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <p class="quote-author">-Thor, God of Thunder</p>
         </div>
     </section>
-    <section>
-        <div class="container">
+    <section class="cta">
+        <div class="wrapper">
             <div class="cta-box">
                 <div class="cta-left">
                     <p>Call to action! It's time!</p>
